letschat-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: letschat
  name: letschat
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: letschat
  template:
    metadata:
      labels:
        appname: letschat
    spec:
      containers:
      - image: docker.io/sdelements/lets-chat:latest
        imagePullPolicy: IfNotPresent
        name: letschat
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: mypvc
            mountPath: /mnt/test
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: letschat-pvc
