mongodb-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    io.kompose.service: mongodb
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/rocketchat-default: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: ALLOW_EMPTY_PASSWORD
              value: "yes"
            - name: MONGODB_ADVERTISED_HOSTNAME
              value: mongodb
            - name: MONGODB_ENABLE_JOURNAL
              value: "true"
            - name: MONGODB_INITIAL_PRIMARY_HOST
              value: mongodb
            - name: MONGODB_INITIAL_PRIMARY_PORT_NUMBER
              value: "27017"
            - name: MONGODB_PORT_NUMBER
              value: "27017"
            - name: MONGODB_REPLICA_SET_MODE
              value: primary
            - name: MONGODB_REPLICA_SET_NAME
              value: rs0
          image: ' '
          name: mongodb
          ports:
            - containerPort: 27017
              hostIP: 0.0.0.0
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/mongodb
              name: mongodb-data
      restartPolicy: Always
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - mongodb
        from:
          kind: ImageStreamTag
          name: mongodb:5.0
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
