letschat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: letschat
spec:
    ports:
    - name: letschat
      nodePort: 0
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      appname: letschat
    sessionAffinity: None
    type: ClusterIP
