letschat-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: letschat
  labels: {}
spec:
  to:
    kind: Service
    name: letschat
  tls: null
  port:
    targetPort: letschat
